...
                                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="green"/>
                                                <state key="normal" image="RockIcon"/>
                                                <connections>
                                                    <action selector="btnRockTapped:" destination="r0B-yr-Dae" eventType="touchUpInside" id="nzg-tK-ESA"/>
...
                                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="yellow"/>
                                                <state key="normal" image="HipHopIcon"/>
                                                <connections>
                                                    <action selector="btnHipHopTapped:" destination="r0B-yr-Dae" eventType="touchUpInside" id="unZ-6Z-A3D"/>
...
                                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="green"/>
                                                <state key="normal" image="PopRockIcon"/>
                                                <connections>
                                                    <action selector="btnPopRockTapped:" destination="r0B-yr-Dae" eventType="touchUpInside" id="mvI-1O-gxL"/>
...
                                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="yellow"/>
                                                <state key="normal" image="PunkIcon"/>
                                                <connections>
                                                    <action selector="btnPunkTapped:" destination="r0B-yr-Dae" eventType="touchUpInside" id="86h-tA-R2b"/>
...
                                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="green"/>
                                                <state key="normal" image="HouseIcon"/>
                                                <connections>
                                                    <action selector="btnHouseTapped:" destination="r0B-yr-Dae" eventType="touchUpInside" id="dpJ-6S-E88"/>
...
                                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="yellow"/>
                                                <state key="normal" image="PopIcon"/>
                                                <connections>
                                                    <action selector="btnPopTapped:" destination="r0B-yr-Dae" eventType="touchUpInside" id="RTK-Y1-6Dw"/>
...
                                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="green"/>
                                                <state key="normal" image="CountryIcon"/>
                                                <connections>
                                                    <action selector="btnCountryTapped:" destination="r0B-yr-Dae" eventType="touchUpInside" id="Cny-cD-ee1"/>
...
                                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="yellow"/>
                                                <state key="normal" image="DiscoIcon"/>
                                                <connections>
                                                    <action selector="btnDiscoTapped:" destination="r0B-yr-Dae" eventType="touchUpInside" id="ttS-Qf-pmm"/>
...
                                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="green"/>
                                                <state key="normal" image="Alternative"/>
                                                <connections>
                                                    <action selector="btnAltTapped:" destination="r0B-yr-Dae" eventType="touchUpInside" id="dk8-4f-rIg"/>
...
                                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="yellow"/>
                                                <state key="normal" image="GrungeIcon"/>
                                                <connections>
                                                    <action selector="btnGrungeTapped:" destination="r0B-yr-Dae" eventType="touchUpInside" id="Oab-64-TSZ"/>
...
                                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="green"/>
                                                <state key="normal" image="IndieIcon"/>
                                                <connections>
                                                    <action selector="btnIndieTapped:" destination="r0B-yr-Dae" eventType="touchUpInside" id="4U7-8u-XOL"/>
...
                                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="yellow"/>
                                                <state key="normal" image="JazzIcon"/>
                                                <connections>
                                                    <action selector="btnJazzTapped:" destination="r0B-yr-Dae" eventType="touchUpInside" id="ef9-p7-n5H"/>
...
