...
        } else {
            print("No Active Session")
        }
    }
    override func viewWillAppear(_ animated: Bool) {
        trackIndex = 0
        self.title = "Timer View"
    }
    @IBAction func btnStart(_ sender: Any) {
        startTimer()
    }
    @IBAction func btnStop(_ sender: Any) {
        stopTimer()
...
    func removedSingleItem(isRemoved: Bool) { }
    func displayCoreDataError(error: Error) {
        showAlert(title: "Error", desc: error.localizedDescription)
    }
    func saveNewFavourite(saved: Bool) {
        if saved {
            showAlert(title: "Added to favourites", desc: "Track added to you favourites.")
        } else {
            showAlert(title: "Error", desc: "Unable to save to favourites")
        }
    }
    func displayFavCleared(listCleared: Bool) { }
    func getFavouriteList(list: [FavTrack]) {
...
