...
                                <color key="backgroundColor" red="0.46566450599999998" green="0.64212161300000004" blue="0.39400985840000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="NlU-xx-SHn"/>
                                    <constraint firstAttribute="width" constant="106" id="TTU-c8-5yy"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="17"/>
                                <state key="normal" title="Logout">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="btnLogout:" destination="XeK-4m-IZC" eventType="touchUpInside" id="B18-rn-t5A"/>
                                </connections>
                            </button>
...
