...
        sender.pulsate()
        self.performSegue(withIdentifier: "SignView", sender: self)
    }
    private func showFailureAlert() {
        let alertController = UIAlertController(title: "Error", message:
            "An error has occured", preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "Dismiss", style: .default))

        self.present(alertController, animated: true, completion: nil)
    }
}

